Fixed review not showing

--- a/src/css/AddReviewForm.css
+++ b/src/css/AddReviewForm.css
@@ -1,13 +1,15 @@
 .AddReviewForm{
+    width: 50%;
+    margin: auto;
     margin-top: 100px;
-    border-top: 1px solid black;
+    margin-bottom: 100px;
 }
 
 .AddReviewForm-comp{
     padding-top: 15px;
 }
 
-textarea{
+.AddReviewForm textarea{
     width: 100%;
     height: 150px;
     padding: 12px 20px;
@@ -17,4 +19,16 @@ textarea{
     background-color: #f8f8f8;
     font-size: 16px;
     resize: none;
+}
+
+.AddReviewForm-button{
+    color: black;
+    padding: 5px 10px 5px 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    border: 2px solid black;
+    float: right;
 }
