--- a/src/css/Reviews.css
+++ b/src/css/Reviews.css
@@ -1,3 +1,10 @@
+.Reviews{
+    width: 50%;
+    margin: auto;
+    margin-top: 150px;
+    font-size: 18px;
+}
+
 .Reviews-each{
     margin-top: 30px;
     margin-bottom: 30px;
